--- a/shared/css/shared.css
+++ b/shared/css/shared.css
@@ -152,17 +152,18 @@ li {
     justify-content: center;
     align-items: center;
     height: 99%;
+    min-height: 530px;
     width: 100%;
     min-width: 400px;
 }
 
-.container button {
+.content button {
     border-radius: 3px;
     height: 30px;
     border-style: none;
 }
 
-.container Button:hover {
+.content Button:hover {
     box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
     background: whitesmoke;
     color: black;
